host-namespaces/podfile-deny-hostPID.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pause-host-namespace-hostPID
  labels:
    app: pause-host-namespace-hostPID
spec:
  containers:
  - name: pause
    image: k8s.gcr.io/pause
  hostPID: true
